# fastapi-user-management-api

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: base.py  user.py
app/repositories/: base.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/services/: auth.py  user.py
docker/: Dockerfile
tests/: conftest.py  test_auth.py  test_users.py
